--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.6"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation "android.arch.persistence.room:rxjava2:2.1.1"
+    //rxbinding
+    implementation  'com.jakewharton.rxbinding2:rxbinding:2.0.0'
 //leakcanary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
 }
