--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Lesson.EnrolledStudents"></activity>
         <activity android:name=".Student.AddMarkToStudentActivity" />
         <activity android:name=".Student.AddLessonToStudentActivity" />
         <activity android:name=".Student.StudentDetailsActivity" />
@@ -26,7 +25,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
-
+    <uses-feature android:name="android.software.leanback" android:required="false" />
 </manifest>
